# IBPython

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.mcp  Dockerfile.scheduler  IBKR_API_FIXES_SUMMARY.md  IBKR_API_PARAMETER_REVIEW.md  Makefile  PROJECT_SETUP_ARCHITECTURE.md  README.md  REVIEW.md  backfiller.py  docker-compose.yml  ibkr_research_raw.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backup/: ohlcv_g10_fx_1m.json  ohlcv_kospi200_1m.json  ohlcv_nikkei_mini_1m.json  ohlcv_us_index_futures_1m.json
docs/: event_contracts_api.md  production_market_data_runbook.md
notebooks/: 00_environment_check.ipynb  01_ibkr_connection_test.ipynb  02_load_ohlcv.ipynb  03_redis_test.ipynb  04_questdb_test.ipynb  05_index_composition_sync.ipynb
schedulejob/: ohlcv_fr_cac40_1m.json  ohlcv_g10_fx_1m.json  ohlcv_hk_futures_1m.json  ohlcv_major_indices_5m.json  ohlcv_sgx_a50_1m.json  ohlcv_taifex_taiex_1m.json  ohlcv_uk_ftse100_1m.json  ohlcv_us_equity_1m.json  reload_g10_index_composition.json
scripts/: validate_scheduler_jobs.py
src/: __init__.py  __mcp_server__.py  mcp_server.py
tests/: test_account.py  test_backfiller.py  test_bond_curve.py  test_bonds.py  test_business_portfolio.py  test_config_loader.py  test_event_contracts.py  test_exchange_resolver.py  test_fixed_income.py  test_fundamental_data.py  test_ibkr_connection.py  test_ibkr_contract_mapping.py  test_ibkr_historical.py  test_ibkr_rate_limit.py  test_ibkr_reference_snapshots.py  test_index_composition.py  test_main.py  test_market_data_budget.py  (+19 more)
(+102 files in other folders)
