[project]
name = "ibpython-market-data"
version = "0.1.0"
description = "Async market data feed and transport foundation for systematic trading research and live workflows."
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "redis>=5.0",
  "psycopg[binary]>=3.2",
  "ib-insync>=0.9.86",
  "pandas>=2.2",
  "python-dotenv>=1.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "mcp[cli]>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 140

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = [
  "F401",  # Facade modules intentionally re-export several legacy names.
  "F841",  # Tests use throwaway locals in mocked call paths.
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = false
show_error_codes = true
follow_imports = "skip"
disable_error_code = [
  "literal-required",
  "union-attr",
  "attr-defined",
]
